--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Setup Services
         run: |
-          sed -i.bak -e "s/^FROM phpswoole\/swoole.*$/FROM phpswoole\/swoole:php${{ matrix.php }}/g" ./Dockerfile
+          sed -i.bak -e "s/^FROM phpswoole\/php.*$/FROM phpswoole\/php:${{ matrix.php }}/g" ./Dockerfile
           docker-compose up -d
           docker ps -a
           docker-compose exec -T app php -v
