--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -100,7 +100,7 @@ services:
 
   consul:
     container_name: swoole-library-consul
-    image: consul:latest
+    image: consul:v0.6.4
     command:
       consul agent -dev -client=0.0.0.0
     ports:
