--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php: ["8.0"]
+        php: ["8.0", "8.1"]
 
     name: Under PHP ${{ matrix.php }}
 
@@ -27,7 +27,7 @@ jobs:
 
       - name: Run Unit Tests
         run: |
-          sleep 5s
+          sleep 60s
           docker-compose exec -T app composer test
 
       - name: Stop and Remove Docker Containers
