--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php: ["8.0", "8.1"]
+        php: ["8.0"]
 
     name: Under PHP ${{ matrix.php }}
 
@@ -18,7 +18,7 @@ jobs:
 
       - name: Setup Services
         run: |
-          sed -i.bak -e "s/^FROM phpswoole\/php*$/FROM phpswoole\/php:${{ matrix.php }}/g" ./Dockerfile
+          sed -i.bak -e "s/^FROM phpswoole\/swoole.*$/FROM phpswoole\/swoole:php${{ matrix.php }}/g" ./Dockerfile
           docker-compose up -d
           docker ps -a
           docker-compose exec -T app php -v
@@ -27,7 +27,7 @@ jobs:
 
       - name: Run Unit Tests
         run: |
-          sleep 60s
+          sleep 40s
           docker-compose exec -T app composer test
 
       - name: Stop and Remove Docker Containers
